--- a/views/showusers.erb
+++ b/views/showusers.erb
@@ -7,10 +7,10 @@
 			<th>Дата записи</th>
 			<th>Парикмахер</th>
 			<th>Цвет</th>
-		</tr>			
+		</tr>
 	</thead>
 
-	<body>
+	<tbody>
 		<% @results.each do |row| %>
 			<tr>
 				<td><%= row['username'] %></td>
@@ -20,6 +20,6 @@
 				<td><%= row['color'] %></td>
 			</tr>
 		<% end %>
-	</body>
+	</tbody>
 
 </table>
