Few minor UI improvements

--- a/views/showusers.erb
+++ b/views/showusers.erb
@@ -17,7 +17,7 @@
 				<td><%= row['phone'] %></td>
 				<td><%= row['datestamp'] %></td>
 				<td><%= row['barber'] %></td>
-				<td><%= row['color'] %></td>
+				<td style="background-color: <%= row['color'] %>"><%= row['color'] %></td>
 			</tr>
 		<% end %>
 	</tbody>
